# async-mailer

./: CHANGELOG.md  Cargo.toml  README.md  release.toml  release.zsh
.github/workflows/: rust.yml
core/: CHANGELOG.md  Cargo.toml  release.toml
core/src/: lib.rs
outlook/: CHANGELOG.md  Cargo.toml  release.toml
outlook/src/: lib.rs
smtp/: CHANGELOG.md  Cargo.toml  release.toml
smtp/src/: lib.rs
src/: lib.rs
