[workspace]

[package]
name = "async-mailer"
description = "An async `dyn Mailer` trait with runtime-pluggable Outlook (Office365) and SMTP implementations."
license = "MPL-2.0"
repository = "https://github.com/LeoniePhiline/async-mailer"
version = "0.1.2"
edition = "2021"

[features]
default = ["outlook", "smtp", "tracing"]
outlook = ["dep:async-mailer-outlook"]
smtp = ["dep:async-mailer-smtp"]
tracing = ["async-mailer-core/tracing", "async-mailer-outlook?/tracing", "async-mailer-smtp?/tracing"]

[dependencies]
async-mailer-core = { path = "core", version = "0.1" }
async-mailer-outlook = { optional = true, path = "outlook", version = "0.1" }
async-mailer-smtp = { optional = true, path = "smtp", version = "0.1" }
secrecy = "0.8.0"
