[package]
name = "async-mailer-core"
description = "Internal core crate for `async-mailer`."
categories = ["email"]
keywords = ["async", "mailer", "smtp", "outlook"]
license = "MPL-2.0"
repository = "https://github.com/LeoniePhiline/async-mailer/core"
documentation = "https://docs.rs/async-mailer-core/"
version = "0.4.0"
edition = "2021"

[features]
default = ["tracing"]
tracing = ["dep:tracing"]

[dependencies]
async-trait = "0.1.80"
mail-send = { version = "0.5.0", default-features = false, features = ["builder"] }
thiserror = "2.0.0"
tracing = { optional = true, version = "0.1.40" }
