[package]
name = "async-mailer-outlook"
description = "Async Outlook (Office365) mailer implementation, intended to be used as `async-mailer` generic `Mailer` or `DynMailer` trait object."
license = "MPL-2.0"
repository = "https://github.com/LeoniePhiline/async-mailer/outlook"
documentation = "https://docs.rs/async-mailer-outlook/"
version = "0.2.1"
edition = "2021"

[features]
default = ["tracing"]
tracing = ["dep:tracing"]

[dependencies]
async-mailer-core = { path = "../core", version = "0.2" }
async-trait = "0.1.68"
base64 = "0.21.0"
reqwest = { version = "0.11.17", features = ["rustls", "rustls-tls", "gzip", "brotli"], default-features = false }
secrecy = "0.8.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.38"
tracing = { optional = true, version = "0.1.37" }
