[package]
name = "async-mailer-outlook"
description = "Async Outlook (Office365) mailer implementation, intended to be used as `async-mailer` generic `Mailer` or `DynMailer` trait object."
categories = ["email"]
keywords = ["async", "mailer", "outlook"]
license = "MPL-2.0"
repository = "https://github.com/LeoniePhiline/async-mailer/outlook"
documentation = "https://docs.rs/async-mailer-outlook/"
version = "0.4.0"
edition = "2021"

[features]
default = ["tracing"]
tracing = ["dep:tracing"]

[dependencies]
async-mailer-core = { path = "../core", version = "0.3" }
async-trait = "0.1.80"
base64 = "0.22.1"
reqwest = { version = "0.12.4", default-features = false, features = ["rustls-tls", "charset", "http2", "macos-system-configuration", "gzip", "brotli"] }
secrecy = "0.10.0"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
thiserror = "1.0.59"
tracing = { optional = true, version = "0.1.40" }
