[package]
name = "async-mailer-smtp"
description = "Async SMTP mailer implementation, intended to be used as `async-mailer` generic `Mailer` or `DynMailer` trait object."
categories = ["email"]
keywords = ["async", "mailer", "smtp"]
license = "MPL-2.0"
repository = "https://github.com/LeoniePhiline/async-mailer/smtp"
documentation = "https://docs.rs/async-mailer-smtp/"
version = "0.3.2"
edition = "2021"

[features]
default = ["tracing"]
tracing = ["dep:tracing"]
clap = ["dep:clap"]

[dependencies]
async-mailer-core = { path = "../core", version = "0.3" }
async-trait = "0.1.80"
clap = { optional = true, version = "4.5.4", features = ["derive"] }
secrecy = "0.8.0"
thiserror = "1.0.59"
tracing = { optional = true, version = "0.1.40" }
